# rbufr

./: .gitignore  Cargo.toml  LICENSE  README.md  test.py
rbufr/: Cargo.toml
rbufr/example/datas/: 36_2025-12-17T09_00_00.bufr
rbufr/gentool/: config.rs  gen.rs
rbufr/gentool/fr/: btable.rs  dtable.rs  mod.rs
rbufr/gentool/opera/: mod.rs
rbufr/gentool/wmo/: btable.rs  dtable.rs  mod.rs
rbufr/src/: block.rs  decoder.rs  errors.rs  lib.rs  opera.rs  parser.rs  prelude.rs  table_path.rs  tables.rs
rbufr/src/core/: mod.rs  prelude.rs  tables.rs
rbufr/src/structs/: bit.rs  mod.rs  tools.rs
rbufr/src/structs/versions/: mod.rs  v2.rs  v3.rs  v4.rs
rbufr/tables/local/: BUFR_TableB_11.bufrtbl  BUFR_TableB_12.bufrtbl  BUFR_TableB_13.bufrtbl  BUFR_TableB_14.bufrtbl  BUFR_TableB_255_1.bufrtbl  BUFR_TableB_255_5.bufrtbl  BUFR_TableB_6.bufrtbl  BUFR_TableB_65535_1.bufrtbl  BUFR_TableB_65535_12.bufrtbl  BUFR_TableB_65535_3.bufrtbl  BUFR_TableB_65535_4.bufrtbl  BUFR_TableB_65535_6.bufrtbl  BUFR_TableB_65535_7.bufrtbl  BUFR_TableB_85_1.bufrtbl  BUFR_TableB_85_17.bufrtbl  BUFR_TableB_85_18.bufrtbl  BUFR_TableB_85_19.bufrtbl  BUFR_TableB_85_2.bufrtbl  BUFR_TableB_85_6.bufrtbl  BUFR_TableB_85_9.bufrtbl  BUFR_TableD_11.bufrtbl  BUFR_TableD_15.bufrtbl  BUFR_TableD_18.bufrtbl  BUFR_TableD_255_5.bufrtbl  BUFR_TableD_3.bufrtbl  BUFR_TableD_6.bufrtbl  BUFR_TableD_65535_1.bufrtbl  BUFR_TableD_65535_2.bufrtbl  BUFR_TableD_65535_4.bufrtbl  BUFR_TableD_65535_7.bufrtbl  BUFR_TableD_85_1.bufrtbl  BUFR_TableD_85_10.bufrtbl  BUFR_TableD_85_11.bufrtbl  BUFR_TableD_85_2.bufrtbl  BUFR_TableD_85_4.bufrtbl  BUFR_TableD_85_6.bufrtbl  BUFR_TableD_85_9.bufrtbl
rbufr/tables/master/: BUFR_TableB_0.bufrtbl  BUFR_TableB_10.bufrtbl  BUFR_TableB_11.bufrtbl  BUFR_TableB_12.bufrtbl  BUFR_TableB_15.bufrtbl  BUFR_TableB_19.bufrtbl  BUFR_TableB_25.bufrtbl  BUFR_TableB_26.bufrtbl  BUFR_TableB_27.bufrtbl  BUFR_TableB_29.bufrtbl  BUFR_TableB_31.bufrtbl  BUFR_TableB_33.bufrtbl  BUFR_TableB_35.bufrtbl  BUFR_TableB_4.bufrtbl  BUFR_TableB_40.bufrtbl  BUFR_TableB_41.bufrtbl  BUFR_TableB_42.bufrtbl  BUFR_TableB_5.bufrtbl  BUFR_TableB_7.bufrtbl  BUFR_TableB_8.bufrtbl  BUFR_TableD_10.bufrtbl  BUFR_TableD_11.bufrtbl  BUFR_TableD_12.bufrtbl  BUFR_TableD_15.bufrtbl  BUFR_TableD_18.bufrtbl  BUFR_TableD_2.bufrtbl  BUFR_TableD_4.bufrtbl  BUFR_TableD_40.bufrtbl  BUFR_TableD_5.bufrtbl  BUFR_TableD_6.bufrtbl  BUFR_TableD_8.bufrtbl
rbufr/tables/opera/: BUFR_Opera_Bitmap_65535.bufrtbl
rbufr/tests/: test_rc.rs
rbufrp/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml
rbufrp/src/: lib.rs
rbufrp/src/rbufrp/: __init__.py  _core.pyi
rbufrp/src/rbufrp/tables/local/: BUFR_TableB_10.bufrtbl  BUFR_TableB_15.bufrtbl  BUFR_TableB_16.bufrtbl  BUFR_TableB_18.bufrtbl  BUFR_TableB_2.bufrtbl  BUFR_TableB_247_7.bufrtbl  (+30 more)
(+25 files in other folders)
