[package]
name = "rbufr"
version = "0.1.0"
edition = "2024"

[lib]
name = "librbufr"
path = "src/lib.rs"

[dependencies]
csv = "1.4.0"
encoding_rs = "0.8.35"
flate2 = "1.1.5"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
gentools = { path = "../gen" }
anyhow = "1.0.100"
rustc-hash = "2.1.1"

[features]
default = ["opera"]
opera = ["gentools/opera"]
python_bindings = []


[profile.bench]
debug = true
lto = false
opt-level = 3

[profile.release]
debug = true
lto = false
