[package]
name = "rbufr"
version = "0.1.0"
edition = "2024"

[lib]
name = "librbufr"
path = "src/lib.rs"

[[bin]]
name = "rbufrgen"
path = "src/gentool/gen.rs"


[dependencies]
csv = "1.4.0"
encoding_rs = "0.8.35"
flate2 = "1.1.5"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
rustc-hash = "2.1.1"

bincode = "1.3.3"
ph = "0.10.0"
byteorder = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
glob = "0.3"
memmap2 = "0.9"
regex = "1.11"
rkyv = { version = "0.8.12" }
toml = "0.8"
binout = "0.3.1"

[features]
default = []
opera = []
python_bindings = []


[profile.bench]
debug = true
lto = false
opt-level = 3

[profile.release]
debug = true
lto = false
